fix for exact spherical checks and test SERVER-2951